<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.github.crayonxiaoxin.abc.widgets.CustomSettingView
                        android:id="@+id/setting_enable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cs_has_sep="true"
                        app:cs_show_right_icon="false"
                        app:cs_sub_title=""
                        app:cs_title="@string/setting_enable" />

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/dp_16"
                        app:layout_constraintStart_toStartOf="parent" />
                </RelativeLayout>

                <com.github.crayonxiaoxin.abc.widgets.CustomSettingView
                    android:id="@+id/setting_auto_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cs_has_sep="true"
                    app:cs_sub_title=""
                    app:cs_title="@string/setting_auto_start" />

                <com.github.crayonxiaoxin.abc.widgets.CustomSettingView
                    android:id="@+id/setting_rules"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cs_has_sep="true"
                    app:cs_sub_title=""
                    app:cs_title="@string/setting_rules" />

                <com.github.crayonxiaoxin.abc.widgets.CustomSettingView
                    android:id="@+id/setting_log"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cs_has_sep="true"
                    app:cs_sub_title=""
                    app:cs_title="@string/setting_log" />

                <com.github.crayonxiaoxin.abc.widgets.CustomSettingView
                    android:id="@+id/setting_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cs_has_sep="true"
                    app:cs_show_right_icon="false"
                    app:cs_sub_title=""
                    app:cs_title="@string/setting_version" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>